--- a/Images/bag_to_imgs.ipynb
+++ b/Images/bag_to_imgs.ipynb
@@ -2,114 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "8d695b2c",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: bagpy in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (0.5)\n",
-      "Requirement already satisfied: pyyaml in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from bagpy) (6.0)\n",
-      "Requirement already satisfied: rospkg in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from bagpy) (1.4.0)\n",
-      "Requirement already satisfied: matplotlib in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from bagpy) (3.7.1)\n",
-      "Requirement already satisfied: setuptools-scm in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from bagpy) (7.1.0)\n",
-      "Requirement already satisfied: ipython in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from bagpy) (7.31.1)\n",
-      "Requirement already satisfied: seaborn>=0.9.0 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from bagpy) (0.12.2)\n",
-      "Requirement already satisfied: pycryptodomex in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from bagpy) (3.17)\n",
-      "Requirement already satisfied: jinja2<3.1 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from bagpy) (3.0.3)\n",
-      "Requirement already satisfied: pyserial in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from bagpy) (3.5)\n",
-      "Requirement already satisfied: py3rosmsgs in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from bagpy) (1.18.2)\n",
-      "Requirement already satisfied: bitstring in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from bagpy) (4.0.1)\n",
-      "Requirement already satisfied: pytest in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from bagpy) (7.2.2)\n",
-      "Requirement already satisfied: importlib-resources in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from bagpy) (5.12.0)\n",
-      "Requirement already satisfied: numpy in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from bagpy) (1.21.5)\n",
-      "Requirement already satisfied: pandas in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from bagpy) (1.4.3)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from jinja2<3.1->bagpy) (2.1.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from matplotlib->bagpy) (1.4.4)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from matplotlib->bagpy) (1.0.7)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from matplotlib->bagpy) (0.11.0)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from matplotlib->bagpy) (9.4.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from matplotlib->bagpy) (4.39.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from matplotlib->bagpy) (3.0.9)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from matplotlib->bagpy) (2.8.2)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from matplotlib->bagpy) (21.3)\n",
-      "Requirement already satisfied: zipp>=3.1.0 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from importlib-resources->bagpy) (3.8.0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from pandas->bagpy) (2022.1)\n",
-      "Requirement already satisfied: pygments in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from ipython->bagpy) (2.11.2)\n",
-      "Requirement already satisfied: traitlets>=4.2 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from ipython->bagpy) (5.1.1)\n",
-      "Requirement already satisfied: matplotlib-inline in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from ipython->bagpy) (0.1.6)\n",
-      "Requirement already satisfied: pexpect>4.3 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from ipython->bagpy) (4.8.0)\n",
-      "Requirement already satisfied: appnope in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from ipython->bagpy) (0.1.2)\n",
-      "Requirement already satisfied: setuptools>=18.5 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from ipython->bagpy) (63.4.1)\n",
-      "Requirement already satisfied: jedi>=0.16 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from ipython->bagpy) (0.18.1)\n",
-      "Requirement already satisfied: decorator in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from ipython->bagpy) (5.1.1)\n",
-      "Requirement already satisfied: pickleshare in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from ipython->bagpy) (0.7.5)\n",
-      "Requirement already satisfied: backcall in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from ipython->bagpy) (0.2.0)\n",
-      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from ipython->bagpy) (3.0.20)\n",
-      "Requirement already satisfied: gnupg in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from py3rosmsgs->bagpy) (2.3.1)\n",
-      "Requirement already satisfied: iniconfig in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from pytest->bagpy) (2.0.0)\n",
-      "Requirement already satisfied: attrs>=19.2.0 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from pytest->bagpy) (21.4.0)\n",
-      "Requirement already satisfied: exceptiongroup>=1.0.0rc8 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from pytest->bagpy) (1.1.0)\n",
-      "Requirement already satisfied: pluggy<2.0,>=0.12 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from pytest->bagpy) (1.0.0)\n",
-      "Requirement already satisfied: tomli>=1.0.0 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from pytest->bagpy) (2.0.1)\n",
-      "Requirement already satisfied: distro>=1.4.0 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from rospkg->bagpy) (1.8.0)\n",
-      "Requirement already satisfied: catkin-pkg in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from rospkg->bagpy) (0.5.2)\n",
-      "Requirement already satisfied: typing-extensions in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from setuptools-scm->bagpy) (4.3.0)\n",
-      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from jedi>=0.16->ipython->bagpy) (0.8.3)\n",
-      "Requirement already satisfied: ptyprocess>=0.5 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from pexpect>4.3->ipython->bagpy) (0.7.0)\n",
-      "Requirement already satisfied: wcwidth in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython->bagpy) (0.2.5)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib->bagpy) (1.16.0)\n",
-      "Requirement already satisfied: docutils in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from catkin-pkg->rospkg->bagpy) (0.18.1)\n",
-      "Requirement already satisfied: psutil>=1.2.1 in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (from gnupg->py3rosmsgs->bagpy) (5.9.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install bagpy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "8abeab9f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pillow in /Users/dsikdar/opt/anaconda3/envs/py39/lib/python3.9/site-packages (9.4.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install pillow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "9cf89bf5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import bagpy\n",
+    "from bagpy import bagreader\n",
+    "\n",
     "import PIL\n",
-    "from PIL import Image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "75ddf4f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from PIL import Image\n",
+    "\n",
+    "from pathlib import Path\n",
+    "\n",
     "import pandas as pd"
    ]
   },
@@ -123,15 +28,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO]  Data folder /Users/dsikdar/Documents/UCI_MAIN/CLUBS/QC@UCI_Club/GroupProject/QuantumSelfDriving/Images/Ch2_002/HMB_1 already exists. Not creating.\n"
+      "[INFO]  Data folder /Users/dsikdar/Documents/UCI_MAIN/CLUBS/QC@UCI_Club/GroupProject/Dataset/HMB_1 already exists. Not creating.\n"
      ]
     }
    ],
    "source": [
-    "import bagpy\n",
-    "from bagpy import bagreader\n",
+    "b1 = bagreader('/Users/dsikdar/Documents/UCI_MAIN/CLUBS/QC@UCI_Club/GroupProject/Dataset/HMB_1.bag')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e1665472",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/dsikdar/Documents/UCI_MAIN/CLUBS/QC@UCI_Club/GroupProject/Dataset/HMB_5.bag\n",
+      "/Users/dsikdar/Documents/UCI_MAIN/CLUBS/QC@UCI_Club/GroupProject/Dataset/HMB_4.bag\n",
+      "/Users/dsikdar/Documents/UCI_MAIN/CLUBS/QC@UCI_Club/GroupProject/Dataset/HMB_6.bag\n",
+      "/Users/dsikdar/Documents/UCI_MAIN/CLUBS/QC@UCI_Club/GroupProject/Dataset/HMB_2.bag\n",
+      "/Users/dsikdar/Documents/UCI_MAIN/CLUBS/QC@UCI_Club/GroupProject/Dataset/HMB_1.bag\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "b = bagreader('/Users/dsikdar/Documents/UCI_MAIN/CLUBS/QC@UCI_Club/GroupProject/QuantumSelfDriving/Images/Ch2_002/HMB_1.bag')"
+    "directory_path = Path('/Users/dsikdar/Documents/UCI_MAIN/CLUBS/QC@UCI_Club/GroupProject/Dataset/')\n",
+    "list_of_bag_files = list(directory_path.glob('**/*.bag'))\n",
+    "#for bag_file_path in list_of_bag_files:\n",
+    "#    print(bag_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "865904cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO]  Successfully created the data folder /Users/dsikdar/Documents/UCI_MAIN/CLUBS/QC@UCI_Club/GroupProject/Dataset/HMB_5.\n",
+      "[INFO]  Successfully created the data folder /Users/dsikdar/Documents/UCI_MAIN/CLUBS/QC@UCI_Club/GroupProject/Dataset/HMB_4.\n",
+      "[INFO]  Successfully created the data folder /Users/dsikdar/Documents/UCI_MAIN/CLUBS/QC@UCI_Club/GroupProject/Dataset/HMB_6.\n",
+      "[INFO]  Successfully created the data folder /Users/dsikdar/Documents/UCI_MAIN/CLUBS/QC@UCI_Club/GroupProject/Dataset/HMB_2.\n",
+      "[INFO]  Successfully created the data folder /Users/dsikdar/Documents/UCI_MAIN/CLUBS/QC@UCI_Club/GroupProject/Dataset/HMB_1.\n",
+      "b1 <bagpy.bagreader.bagreader object at 0x7f92ab55b6a0>\n",
+      "b2 <bagpy.bagreader.bagreader object at 0x7f92064b2b50>\n",
+      "b3 <bagpy.bagreader.bagreader object at 0x7f920ce2f130>\n",
+      "b4 <bagpy.bagreader.bagreader object at 0x7f922741bb80>\n",
+      "b5 <bagpy.bagreader.bagreader object at 0x7f91b8babbb0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict_of_bagreaders = {'b'+str(i+1): bagreader(str(list_of_bag_files[i])) for i in range(len(list_of_bag_files))}\n",
+    "for key in dict_of_bagreaders:\n",
+    "    print(key, dict_of_bagreaders[key])"
    ]
   },
   {
