made sample circuit with custom parameters - testing weights scheme for keras qlayer

--- a/circuit_ansatz/convert_qiskit_to_pennylane.ipynb
+++ b/circuit_ansatz/convert_qiskit_to_pennylane.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d953c719",
    "metadata": {},
    "outputs": [],
@@ -44,10 +44,10 @@
       "\n",
       "After we use the method \"get_quantum_circuit()\", we can obtain the actual circuit, whose type is 'qiskit.circuit.quantumcircuit.QuantumCircuit'>\n",
       "\n",
-      "0: ──RX(2.22)──RZ(4.23)─╭●───────┤  \n",
-      "1: ──RX(1.44)──RZ(4.85)─╰X─╭●────┤  \n",
-      "2: ──RX(2.78)──RZ(4.50)────╰X─╭●─┤  \n",
-      "3: ──RX(4.58)──RZ(2.97)───────╰X─┤  \n"
+      "0: ──RX(2.96)──RZ(3.49)─╭●───────┤  \n",
+      "1: ──RX(0.25)──RZ(0.36)─╰X─╭●────┤  \n",
+      "2: ──RX(4.44)──RZ(3.41)────╰X─╭●─┤  \n",
+      "3: ──RX(0.72)──RZ(5.06)───────╰X─┤  \n"
      ]
     }
    ],
@@ -75,6 +75,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "supposed-repair",
+   "metadata": {},
+   "source": [
+    "### -----------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "welsh-curtis",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gate_configurations import circuit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "played-blake",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Param Dict: {'rx0': 0.5, 'rx1': 0.33, 'rx2': 0.67, 'rx3': 1.0, 'rz4': 0.0, 'rz5': 0.0, 'rz6': 1.0, 'rz7': 0.707} \n",
+      "\n",
+      "     ┌─────────┐   ┌───────┐                 \n",
+      "q_0: ┤ Rx(0.5) ├───┤ Rz(0) ├────■────────────\n",
+      "     ├─────────┴┐  ├───────┤  ┌─┴─┐          \n",
+      "q_1: ┤ Rx(0.33) ├──┤ Rz(0) ├──┤ X ├──■───────\n",
+      "     ├──────────┤  ├───────┤  └───┘┌─┴─┐     \n",
+      "q_2: ┤ Rx(0.67) ├──┤ Rz(1) ├───────┤ X ├──■──\n",
+      "     └┬───────┬─┘┌─┴───────┴─┐     └───┘┌─┴─┐\n",
+      "q_3: ─┤ Rx(1) ├──┤ Rz(0.707) ├──────────┤ X ├\n",
+      "      └───────┘  └───────────┘          └───┘\n",
+      "c: 4/════════════════════════════════════════\n",
+      "                                             \n"
+     ]
+    }
+   ],
+   "source": [
+    "circ = circuit(4)\n",
+    "circ.build_cascade_rx([0.5, 0.33, 0.67, 1.0])\n",
+    "circ.build_cascade_rz([0.0, 0.0, 1.0, 0.707])\n",
+    "circ.cx_almost_all_neighbors()\n",
+    "\n",
+    "print('Param Dict:', circ.get_rotation_params(), '\\n')\n",
+    "print(circ.get_quantum_circuit().draw())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "absolute-catch",
@@ -83,14 +137,14 @@
     {
      "data": {
       "text/plain": [
-       "{'rx1': 2.216405686489437,\n",
-       " 'rx2': 1.4412926089581348,\n",
-       " 'rx3': 2.775712586615909,\n",
-       " 'rx4': 4.5818375927641934,\n",
-       " 'rz5': 4.227467125540714,\n",
-       " 'rz6': 4.845487852393711,\n",
-       " 'rz7': 4.504397364286557,\n",
-       " 'rz8': 2.968352665748927}"
+       "{'rx0': 0.5,\n",
+       " 'rx1': 0.33,\n",
+       " 'rx2': 0.67,\n",
+       " 'rx3': 1.0,\n",
+       " 'rz4': 0.0,\n",
+       " 'rz5': 0.0,\n",
+       " 'rz6': 1.0,\n",
+       " 'rz7': 0.707}"
       ]
      },
      "execution_count": 4,
@@ -99,7 +153,32 @@
     }
    ],
    "source": [
-    "qc.get_rotation_params()"
+    "circ.get_rotation_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "appropriate-asthma",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: ──RX(0.50)──RZ(0.00)─╭●───────┤  \n",
+      "1: ──RX(0.33)──RZ(0.00)─╰X─╭●────┤  \n",
+      "2: ──RX(0.67)──RZ(1.00)────╰X─╭●─┤  \n",
+      "3: ──RX(1.00)──RZ(0.71)───────╰X─┤  \n"
+     ]
+    }
+   ],
+   "source": [
+    "qiskit_circ = circ.get_quantum_circuit()\n",
+    "pennylane_circ = pq.load(qiskit_circ)\n",
+    "\n",
+    "circ_drawer = qml.draw(pennylane_circ)\n",
+    "print(circ_drawer())"
    ]
   },
   {
