did more playing around with Keras qlayer; nothing big yet

--- a/circuit_ansatz/convert_qiskit_to_pennylane.ipynb
+++ b/circuit_ansatz/convert_qiskit_to_pennylane.ipynb
@@ -27,30 +27,16 @@
    "outputs": [],
    "source": [
     "import pennylane as qml\n",
-    "import pennylane_qiskit as pq"
+    "import pennylane_qiskit as pq\n",
+    "from gate_configurations import circuit\n",
+    "\n",
+    "import tensorflow as tf"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "1506b687",
+   "cell_type": "raw",
+   "id": "reasonable-north",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The type of circ_1 is 'gate_configurations.circuit'>\n",
-      "\n",
-      "After we use the method \"get_quantum_circuit()\", we can obtain the actual circuit, whose type is 'qiskit.circuit.quantumcircuit.QuantumCircuit'>\n",
-      "\n",
-      "0: ──RX(2.96)──RZ(3.49)─╭●───────┤  \n",
-      "1: ──RX(0.25)──RZ(0.36)─╰X─╭●────┤  \n",
-      "2: ──RX(4.44)──RZ(3.41)────╰X─╭●─┤  \n",
-      "3: ──RX(0.72)──RZ(5.06)───────╰X─┤  \n"
-     ]
-    }
-   ],
    "source": [
     "# For example: \n",
     "\n",
@@ -76,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supposed-repair",
+   "id": "immune-persian",
    "metadata": {},
    "source": [
     "### -----------------------------------------------------------------------------------------"
@@ -85,24 +71,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "welsh-curtis",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from gate_configurations import circuit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "played-blake",
+   "id": "widespread-lesson",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Param Dict: {'rx0': 0.5, 'rx1': 0.33, 'rx2': 0.67, 'rx3': 1.0, 'rz4': 0.0, 'rz5': 0.0, 'rz6': 1.0, 'rz7': 0.707} \n",
+      "Param Dict: {'weights_0': 0.5, 'weights_1': 0.33, 'weights_2': 0.67, 'weights_3': 1.0, 'weights_4': 0.0, 'weights_5': 0.0, 'weights_6': 1.0, 'weights_7': 0.707} \n",
       "\n",
       "     ┌─────────┐   ┌───────┐                 \n",
       "q_0: ┤ Rx(0.5) ├───┤ Rz(0) ├────■────────────\n",
@@ -130,36 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "id": "absolute-catch",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'rx0': 0.5,\n",
-       " 'rx1': 0.33,\n",
-       " 'rx2': 0.67,\n",
-       " 'rx3': 1.0,\n",
-       " 'rz4': 0.0,\n",
-       " 'rz5': 0.0,\n",
-       " 'rz6': 1.0,\n",
-       " 'rz7': 0.707}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "circ.get_rotation_params()"
+    "weight_shapes = circ.get_rotation_params()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "appropriate-asthma",
+   "execution_count": 38,
+   "id": "sudden-russell",
    "metadata": {},
    "outputs": [
     {
@@ -179,6 +137,91 @@
     "\n",
     "circ_drawer = qml.draw(pennylane_circ)\n",
     "print(circ_drawer())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "collectible-application",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_qubits = 4\n",
+    "\n",
+    "dev = qml.device('default.qubit', wires=n_qubits, shots=1000)\n",
+    "\n",
+    "@qml.qnode(dev)\n",
+    "def circuit(inputs, w0, w1, w2, w3, w4, w5, w6, w7):\n",
+    "    qml.RX(inputs[0], wires=0)\n",
+    "    qml.RX(inputs[1], wires=1)\n",
+    "    qml.RX(inputs[2], wires=2)\n",
+    "    qml.RX(inputs[3], wires=3)\n",
+    "    pennylane_circ()\n",
+    "    return qml.expval(qml.PauliZ(0)), qml.expval(qml.PauliZ(1)), qml.expval(qml.PauliZ(2)), qml.expval(qml.PauliZ(3))\n",
+    "\n",
+    "@qml.qnode(dev)\n",
+    "def qnode(inputs, weights_0, weight_1):\n",
+    "    qml.RX(inputs[0], wires=0)\n",
+    "    qml.RX(inputs[1], wires=1)\n",
+    "    qml.Rot(*weights_0, wires=0)\n",
+    "    qml.RY(weight_1, wires=1)\n",
+    "    qml.CNOT(wires=[0, 1])\n",
+    "    return qml.expval(qml.PauliZ(0)), qml.expval(qml.PauliZ(1))\n",
+    "\n",
+    "weight_shapes = {\"weights_0\": 3, \"weight_1\": 1}\n",
+    "circuit = qml.QNode(circuit, dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "northern-interstate",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<QNode: wires=4, device='default.qubit', interface='auto', diff_method='best'>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "circuit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "affiliated-prompt",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'weights_0': 3, 'weight_1': 1}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weight_shapes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "valued-scout",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qlayer = qml.qnn.KerasLayer(qnode, weight_shapes, output_dim=2)"
    ]
   },
   {
