made some positive progress

--- a/circuit_ansatz/convert_qiskit_to_pennylane.ipynb
+++ b/circuit_ansatz/convert_qiskit_to_pennylane.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "7aa96753",
    "metadata": {},
    "outputs": [],
@@ -29,6 +29,8 @@
     "import pennylane as qml\n",
     "import pennylane_qiskit as pq\n",
     "from gate_configurations import circuit\n",
+    "import numpy as np\n",
+    "import random\n",
     "\n",
     "import tensorflow as tf"
    ]
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "widespread-lesson",
    "metadata": {},
    "outputs": [
@@ -78,26 +80,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Param Dict: {'weights_0': 0.5, 'weights_1': 0.33, 'weights_2': 0.67, 'weights_3': 1.0, 'weights_4': 0.0, 'weights_5': 0.0, 'weights_6': 1.0, 'weights_7': 0.707} \n",
+      "Param Dict: {'w0': 1.51, 'w1': 0.82, 'w2': 5.03, 'w3': 1.84} \n",
       "\n",
-      "     ┌─────────┐   ┌───────┐                 \n",
-      "q_0: ┤ Rx(0.5) ├───┤ Rz(0) ├────■────────────\n",
-      "     ├─────────┴┐  ├───────┤  ┌─┴─┐          \n",
-      "q_1: ┤ Rx(0.33) ├──┤ Rz(0) ├──┤ X ├──■───────\n",
-      "     ├──────────┤  ├───────┤  └───┘┌─┴─┐     \n",
-      "q_2: ┤ Rx(0.67) ├──┤ Rz(1) ├───────┤ X ├──■──\n",
-      "     └┬───────┬─┘┌─┴───────┴─┐     └───┘┌─┴─┐\n",
-      "q_3: ─┤ Rx(1) ├──┤ Rz(0.707) ├──────────┤ X ├\n",
-      "      └───────┘  └───────────┘          └───┘\n",
-      "c: 4/════════════════════════════════════════\n",
-      "                                             \n"
+      "     ┌──────────┐               \n",
+      "q_0: ┤ Rx(1.51) ├──■────────────\n",
+      "     ├──────────┤┌─┴─┐          \n",
+      "q_1: ┤ Rx(0.82) ├┤ X ├──■───────\n",
+      "     ├──────────┤└───┘┌─┴─┐     \n",
+      "q_2: ┤ Rx(5.03) ├─────┤ X ├──■──\n",
+      "     ├──────────┤     └───┘┌─┴─┐\n",
+      "q_3: ┤ Rx(1.84) ├──────────┤ X ├\n",
+      "     └──────────┘          └───┘\n",
+      "c: 4/═══════════════════════════\n",
+      "                                \n"
      ]
     }
    ],
    "source": [
-    "circ = circuit(4)\n",
-    "circ.build_cascade_rx([0.5, 0.33, 0.67, 1.0])\n",
-    "circ.build_cascade_rz([0.0, 0.0, 1.0, 0.707])\n",
+    "num_of_qubits = 4\n",
+    "num_of_rot_gates = 4\n",
+    "\n",
+    "random_params = [round(random.uniform(0, 2*np.pi),2) for i in range(num_of_rot_gates)]\n",
+    "params_dict = {'w'+str(i): random_params[i] for i in range(num_of_rot_gates)}\n",
+    "\n",
+    "circ = circuit(num_of_qubits, params_dict)\n",
+    "circ.build_cascade_rx()\n",
     "circ.cx_almost_all_neighbors()\n",
     "\n",
     "print('Param Dict:', circ.get_rotation_params(), '\\n')\n",
@@ -106,17 +113,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "absolute-catch",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weights: {'w0': 1.51, 'w1': 0.82, 'w2': 5.03, 'w3': 1.84}\n"
+     ]
+    }
+   ],
    "source": [
-    "weight_shapes = circ.get_rotation_params()"
+    "weights = circ.get_rotation_params()\n",
+    "print('Weights:', weights)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "sudden-russell",
    "metadata": {},
    "outputs": [
@@ -124,10 +140,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: ──RX(0.50)──RZ(0.00)─╭●───────┤  \n",
-      "1: ──RX(0.33)──RZ(0.00)─╰X─╭●────┤  \n",
-      "2: ──RX(0.67)──RZ(1.00)────╰X─╭●─┤  \n",
-      "3: ──RX(1.00)──RZ(0.71)───────╰X─┤  \n"
+      "0: ──RX(1.51)─╭●───────┤  \n",
+      "1: ──RX(0.82)─╰X─╭●────┤  \n",
+      "2: ──RX(5.03)────╰X─╭●─┤  \n",
+      "3: ──RX(1.84)───────╰X─┤  \n"
      ]
     }
    ],
@@ -141,87 +157,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "collectible-application",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default qubit PennyLane plugin\n",
+      "Short name: default.qubit\n",
+      "Package: pennylane\n",
+      "Plugin version: 0.29.1\n",
+      "Author: Xanadu Inc.\n",
+      "Wires: 4\n",
+      "Shots: 1000\n"
+     ]
+    }
+   ],
    "source": [
     "n_qubits = 4\n",
     "\n",
     "dev = qml.device('default.qubit', wires=n_qubits, shots=1000)\n",
+    "print(dev)\n",
     "\n",
     "@qml.qnode(dev)\n",
-    "def circuit(inputs, w0, w1, w2, w3, w4, w5, w6, w7):\n",
+    "def qnode(inputs, weights):\n",
+    "    print('Inputs  :', inputs)\n",
+    "    print('Weights :', weights)\n",
+    "    \n",
     "    qml.RX(inputs[0], wires=0)\n",
     "    qml.RX(inputs[1], wires=1)\n",
     "    qml.RX(inputs[2], wires=2)\n",
     "    qml.RX(inputs[3], wires=3)\n",
-    "    pennylane_circ()\n",
+    "    \n",
+    "    pennylane_circ(wires=[i for i in range(n_qubits)])\n",
+    "    \n",
     "    return qml.expval(qml.PauliZ(0)), qml.expval(qml.PauliZ(1)), qml.expval(qml.PauliZ(2)), qml.expval(qml.PauliZ(3))\n",
     "\n",
-    "@qml.qnode(dev)\n",
-    "def qnode(inputs, weights_0, weight_1):\n",
-    "    qml.RX(inputs[0], wires=0)\n",
-    "    qml.RX(inputs[1], wires=1)\n",
-    "    qml.Rot(*weights_0, wires=0)\n",
-    "    qml.RY(weight_1, wires=1)\n",
-    "    qml.CNOT(wires=[0, 1])\n",
-    "    return qml.expval(qml.PauliZ(0)), qml.expval(qml.PauliZ(1))\n",
-    "\n",
-    "weight_shapes = {\"weights_0\": 3, \"weight_1\": 1}\n",
-    "circuit = qml.QNode(circuit, dev)"
+    "weight_shapes = {\"weights\": (2,2)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "northern-interstate",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<QNode: wires=4, device='default.qubit', interface='auto', diff_method='best'>"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "circuit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "affiliated-prompt",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'weights_0': 3, 'weight_1': 1}"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "weight_shapes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "valued-scout",
    "metadata": {},
    "outputs": [],
    "source": [
-    "qlayer = qml.qnn.KerasLayer(qnode, weight_shapes, output_dim=2)"
+    "circuit = qml.QNode(qnode, dev)\n",
+    "qlayer = qml.qnn.KerasLayer(circuit, weight_shapes, output_dim=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "checked-coupon",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'keras_layer_2',\n",
+       " 'trainable': True,\n",
+       " 'dtype': 'float32',\n",
+       " 'dynamic': True,\n",
+       " 'output_dim': 8,\n",
+       " 'weight_specs': {},\n",
+       " 'weight_shapes': {'weights': (2, 2)},\n",
+       " 'argnum': None}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qlayer.get_config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "extreme-gabriel",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inputs  : [0, 0, 0, 0]\n",
+      "Weights : [0.25, 0.56, 0.75, 1]\n",
+      "tf.Tensor([0.134 0.05  0.04  0.022], shape=(4,), dtype=float64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(qlayer.qnode([0,0,0,0], [0.25, 0.56, 0.75, 1]))"
    ]
   },
   {
