--- a/circuit_ansatz/convert_qiskit_to_pennylane.ipynb
+++ b/circuit_ansatz/convert_qiskit_to_pennylane.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7aa96753",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "widespread-lesson",
    "metadata": {},
    "outputs": [
@@ -80,16 +80,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Param Dict: {'w0': 1.51, 'w1': 0.82, 'w2': 5.03, 'w3': 1.84} \n",
+      "Param Dict: {'w0': 3.51, 'w1': 3.45, 'w2': 0.35, 'w3': 5.77} \n",
       "\n",
       "     ┌──────────┐               \n",
-      "q_0: ┤ Rx(1.51) ├──■────────────\n",
+      "q_0: ┤ Rx(3.51) ├──■────────────\n",
       "     ├──────────┤┌─┴─┐          \n",
-      "q_1: ┤ Rx(0.82) ├┤ X ├──■───────\n",
+      "q_1: ┤ Rx(3.45) ├┤ X ├──■───────\n",
       "     ├──────────┤└───┘┌─┴─┐     \n",
-      "q_2: ┤ Rx(5.03) ├─────┤ X ├──■──\n",
+      "q_2: ┤ Rx(0.35) ├─────┤ X ├──■──\n",
       "     ├──────────┤     └───┘┌─┴─┐\n",
-      "q_3: ┤ Rx(1.84) ├──────────┤ X ├\n",
+      "q_3: ┤ Rx(5.77) ├──────────┤ X ├\n",
       "     └──────────┘          └───┘\n",
       "c: 4/═══════════════════════════\n",
       "                                \n"
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "absolute-catch",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Weights: {'w0': 1.51, 'w1': 0.82, 'w2': 5.03, 'w3': 1.84}\n"
+      "Weights: {'w0': 3.51, 'w1': 3.45, 'w2': 0.35, 'w3': 5.77}\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "sudden-russell",
    "metadata": {},
    "outputs": [
@@ -140,10 +140,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: ──RX(1.51)─╭●───────┤  \n",
-      "1: ──RX(0.82)─╰X─╭●────┤  \n",
-      "2: ──RX(5.03)────╰X─╭●─┤  \n",
-      "3: ──RX(1.84)───────╰X─┤  \n"
+      "0: ──RX(3.51)─╭●───────┤  \n",
+      "1: ──RX(3.45)─╰X─╭●────┤  \n",
+      "2: ──RX(0.35)────╰X─╭●─┤  \n",
+      "3: ──RX(5.77)───────╰X─┤  \n"
      ]
     }
    ],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "collectible-application",
    "metadata": {},
    "outputs": [
@@ -165,6 +165,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Device (dev):\n",
+      "----------------------------------\n",
       "Default qubit PennyLane plugin\n",
       "Short name: default.qubit\n",
       "Package: pennylane\n",
@@ -176,10 +178,8 @@
     }
    ],
    "source": [
-    "n_qubits = 4\n",
-    "\n",
-    "dev = qml.device('default.qubit', wires=n_qubits, shots=1000)\n",
-    "print(dev)\n",
+    "dev = qml.device('default.qubit', wires=num_of_qubits, shots=1000)\n",
+    "print(f'Device (dev):\\n----------------------------------\\n{dev}')\n",
     "\n",
     "@qml.qnode(dev)\n",
     "def qnode(inputs, weights):\n",
@@ -191,16 +191,16 @@
     "    qml.RX(inputs[2], wires=2)\n",
     "    qml.RX(inputs[3], wires=3)\n",
     "    \n",
-    "    pennylane_circ(wires=[i for i in range(n_qubits)])\n",
+    "    pennylane_circ(wires=[i for i in range(num_of_qubits)])\n",
     "    \n",
     "    return qml.expval(qml.PauliZ(0)), qml.expval(qml.PauliZ(1)), qml.expval(qml.PauliZ(2)), qml.expval(qml.PauliZ(3))\n",
     "\n",
-    "weight_shapes = {\"weights\": (2,2)}"
+    "weight_shapes = {\"weights\": (4,)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "valued-scout",
    "metadata": {},
    "outputs": [],
@@ -211,24 +211,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "checked-coupon",
+   "execution_count": 7,
+   "id": "preceding-alert",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'keras_layer_2',\n",
+       "{'name': 'keras_layer',\n",
        " 'trainable': True,\n",
        " 'dtype': 'float32',\n",
        " 'dynamic': True,\n",
-       " 'output_dim': 8,\n",
+       " 'output_dim': 4,\n",
        " 'weight_specs': {},\n",
-       " 'weight_shapes': {'weights': (2, 2)},\n",
+       " 'weight_shapes': {'weights': (4,)},\n",
        " 'argnum': None}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,8 +239,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "extreme-gabriel",
+   "execution_count": 8,
+   "id": "available-world",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
      "text": [
       "Inputs  : [0, 0, 0, 0]\n",
       "Weights : [0.25, 0.56, 0.75, 1]\n",
-      "tf.Tensor([0.134 0.05  0.04  0.022], shape=(4,), dtype=float64)\n"
+      "tf.Tensor([-0.946  0.89   0.832  0.734], shape=(4,), dtype=float64)\n"
      ]
     }
    ],
