nothing signficant changed here

--- a/circuit_ansatz/Keras_with_Pennylane_Native_Circuits.ipynb
+++ b/circuit_ansatz/Keras_with_Pennylane_Native_Circuits.ipynb
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "brief-cocktail",
+   "execution_count": 11,
+   "id": "local-johnson",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
       "1: ──RX(0.10)─╰X─╭●─────────RY(0.33)───────────┤  <Z>\n",
       "2: ──RX(1.50)────╰X────────╭●─────────RY(0.75)─┤  <Z>\n",
       "3: ──RX(0.33)──────────────╰X─────────RY(0.67)─┤  <Z>\n",
-      "tf.Tensor([0.962 0.942 0.092 0.082], shape=(4,), dtype=float64)\n"
+      "tf.Tensor([0.966 0.95  0.036 0.04 ], shape=(4,), dtype=float64)\n"
      ]
     }
    ],
@@ -35,12 +35,13 @@
    "id": "cardiac-drain",
    "metadata": {},
    "source": [
+    "\n",
     "<h3> Importing necessary libraries </h3>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "institutional-affairs",
    "metadata": {},
    "outputs": [],
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "interracial-print",
    "metadata": {},
    "outputs": [
@@ -102,7 +103,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
+   "id": "presidential-rochester",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'keras_layer_3',\n",
+       " 'trainable': True,\n",
+       " 'dtype': 'float64',\n",
+       " 'dynamic': True,\n",
+       " 'output_dim': 4,\n",
+       " 'weight_specs': {},\n",
+       " 'weight_shapes': {'weights': (4,)},\n",
+       " 'argnum': None}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qlayer.get_config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "fewer-gilbert",
    "metadata": {},
    "outputs": [],
@@ -116,16 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "optimum-merchandise",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'sequential',\n",
+       "{'name': 'sequential_1',\n",
        " 'layers': [{'class_name': 'Dense',\n",
-       "   'config': {'name': 'dense',\n",
+       "   'config': {'name': 'dense_4',\n",
        "    'trainable': True,\n",
        "    'dtype': 'float64',\n",
        "    'units': 2,\n",
@@ -140,7 +169,7 @@
        "    'kernel_constraint': None,\n",
        "    'bias_constraint': None}},\n",
        "  {'class_name': 'KerasLayer',\n",
-       "   'config': {'name': 'keras_layer',\n",
+       "   'config': {'name': 'keras_layer_3',\n",
        "    'trainable': True,\n",
        "    'dtype': 'float64',\n",
        "    'dynamic': True,\n",
@@ -149,7 +178,7 @@
        "    'weight_shapes': {'weights': (4,)},\n",
        "    'argnum': None}},\n",
        "  {'class_name': 'Dense',\n",
-       "   'config': {'name': 'dense_1',\n",
+       "   'config': {'name': 'dense_5',\n",
        "    'trainable': True,\n",
        "    'dtype': 'float64',\n",
        "    'units': 2,\n",
@@ -165,7 +194,7 @@
        "    'bias_constraint': None}}]}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "supposed-electronics",
    "metadata": {},
    "outputs": [],
@@ -195,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "administrative-camping",
    "metadata": {},
    "outputs": [
@@ -204,15 +233,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "30/30 [==============================] - 5s 173ms/step - loss: 0.4359 - accuracy: 0.6467 - val_loss: 0.3878 - val_accuracy: 0.7000\n",
+      "30/30 [==============================] - 5s 174ms/step - loss: 0.4359 - accuracy: 0.6467 - val_loss: 0.3878 - val_accuracy: 0.7000\n",
       "Epoch 2/5\n",
-      "30/30 [==============================] - 5s 172ms/step - loss: 0.2962 - accuracy: 0.8200 - val_loss: 0.2839 - val_accuracy: 0.8200\n",
+      "30/30 [==============================] - 5s 177ms/step - loss: 0.2962 - accuracy: 0.8200 - val_loss: 0.2839 - val_accuracy: 0.8200\n",
       "Epoch 3/5\n",
-      "30/30 [==============================] - 5s 172ms/step - loss: 0.2205 - accuracy: 0.8600 - val_loss: 0.2480 - val_accuracy: 0.8200\n",
+      "30/30 [==============================] - 5s 178ms/step - loss: 0.2205 - accuracy: 0.8600 - val_loss: 0.2480 - val_accuracy: 0.8200\n",
       "Epoch 4/5\n",
-      "30/30 [==============================] - 5s 171ms/step - loss: 0.1902 - accuracy: 0.8733 - val_loss: 0.2097 - val_accuracy: 0.8200\n",
+      "30/30 [==============================] - 5s 173ms/step - loss: 0.1902 - accuracy: 0.8733 - val_loss: 0.2097 - val_accuracy: 0.8200\n",
       "Epoch 5/5\n",
-      "30/30 [==============================] - 5s 173ms/step - loss: 0.1685 - accuracy: 0.8533 - val_loss: 0.1869 - val_accuracy: 0.8200\n"
+      "30/30 [==============================] - 5s 174ms/step - loss: 0.1685 - accuracy: 0.8533 - val_loss: 0.1869 - val_accuracy: 0.8200\n"
      ]
     }
    ],
@@ -230,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "changing-washer",
    "metadata": {},
    "outputs": [],
@@ -255,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "third-community",
    "metadata": {},
    "outputs": [
@@ -264,17 +293,17 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/6\n",
-      "30/30 [==============================] - 10s 338ms/step - loss: 0.4519 - accuracy: 0.5667 - val_loss: 0.3463 - val_accuracy: 0.7400\n",
+      "30/30 [==============================] - 10s 345ms/step - loss: 0.4519 - accuracy: 0.5667 - val_loss: 0.3463 - val_accuracy: 0.7400\n",
       "Epoch 2/6\n",
-      "30/30 [==============================] - 10s 338ms/step - loss: 0.3116 - accuracy: 0.7067 - val_loss: 0.2471 - val_accuracy: 0.7800\n",
+      "30/30 [==============================] - 10s 340ms/step - loss: 0.3116 - accuracy: 0.7067 - val_loss: 0.2471 - val_accuracy: 0.7800\n",
       "Epoch 3/6\n",
-      "30/30 [==============================] - 10s 338ms/step - loss: 0.2387 - accuracy: 0.8000 - val_loss: 0.2146 - val_accuracy: 0.7800\n",
+      "30/30 [==============================] - 10s 342ms/step - loss: 0.2387 - accuracy: 0.8000 - val_loss: 0.2146 - val_accuracy: 0.7800\n",
       "Epoch 4/6\n",
-      "30/30 [==============================] - 10s 334ms/step - loss: 0.2104 - accuracy: 0.7933 - val_loss: 0.1867 - val_accuracy: 0.8400\n",
+      "30/30 [==============================] - 10s 341ms/step - loss: 0.2104 - accuracy: 0.7933 - val_loss: 0.1867 - val_accuracy: 0.8400\n",
       "Epoch 5/6\n",
-      "30/30 [==============================] - 10s 337ms/step - loss: 0.1915 - accuracy: 0.8200 - val_loss: 0.1727 - val_accuracy: 0.8400\n",
+      "30/30 [==============================] - 10s 338ms/step - loss: 0.1915 - accuracy: 0.8200 - val_loss: 0.1727 - val_accuracy: 0.8400\n",
       "Epoch 6/6\n",
-      "30/30 [==============================] - 10s 339ms/step - loss: 0.1828 - accuracy: 0.8200 - val_loss: 0.1664 - val_accuracy: 0.8400\n"
+      "30/30 [==============================] - 10s 341ms/step - loss: 0.1828 - accuracy: 0.8200 - val_loss: 0.1664 - val_accuracy: 0.8400\n"
      ]
     }
    ],
