More parameterized version of keras_qlayer; invokes circ funcs from gen_keras_qlayer JNB

--- a/circuit_ansatz/generalized_keras_qlayer.ipynb
+++ b/circuit_ansatz/generalized_keras_qlayer.ipynb
@@ -19,13 +19,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_qubits = 4\n",
+    "num_of_qubits = input(\"Enter number of qubits (default=4): \")\n",
+    "if num_of_qubits == \"\":\n",
+    "    num_of_qubits = 4\n",
+    "else:\n",
+    "    try:\n",
+    "        num_of_qubits = int(num_of_qubits)\n",
+    "    except Exception as error:\n",
+    "        print(error)\n",
+    "        \n",
     "weight_shapes = {\"weights\": num_of_qubits}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "italian-research",
    "metadata": {},
    "outputs": [],
@@ -35,10 +43,10 @@
     "@qml.qnode(dev)\n",
     "def qnode(inputs, weights): \n",
     "    # Data Encoding with the inputs\n",
-    "    pgc.build_cascade_rx(inputs, num_of_qubits)\n",
+    "    pgc.data_encoding(inputs)\n",
     "    \n",
     "    # Constructing the rest of the circuit with the weights\n",
-    "    pgc.cx_all_neighbors(num_of_qubits)\n",
+    "    pgc.cx_almost_all_neighbors(num_of_qubits)\n",
     "    pgc.build_cascade_ry(weights, num_of_qubits)\n",
     "    \n",
     "    # Return measurement layer output\n",
@@ -47,31 +55,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "local-prompt",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: ──RX(0.00)─╭●──RY(0.25)─────────────────────┤  <Z>\n",
+      "1: ──RX(0.10)─╰X─╭●─────────RY(0.33)───────────┤  <Z>\n",
+      "2: ──RX(1.50)────╰X────────╭●─────────RY(0.75)─┤  <Z>\n",
+      "3: ──RX(0.33)──────────────╰X─────────RY(0.67)─┤  <Z>\n"
+     ]
+    }
+   ],
    "source": [
     "# Verification only\n",
-    "# inp = [0, 0.1, 1.5, 0.33]\n",
-    "# wts = [0.25, 0.33, 0.75, 0.67]\n",
+    "if num_of_qubits == 4:\n",
+    "    inp = [0, 0.1, 1.5, 0.33]\n",
+    "    wts = [0.25, 0.33, 0.75, 0.67]\n",
     "\n",
-    "# print(qml.draw(qnode)(inputs=inp, weights=wts))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "preceding-alert",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qlayer = qml.qnn.KerasLayer(qnode, weight_shapes, output_dim=4, dtype='float64')"
+    "    print(qml.draw(qnode)(inputs=inp, weights=wts))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "preceding-alert",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qlayer = qml.qnn.KerasLayer(qnode, weight_shapes, output_dim=num_of_qubits, dtype='float64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "mechanical-google",
    "metadata": {},
    "outputs": [],
@@ -82,14 +102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "available-world",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([0.976 0.948 0.094 0.09 ], shape=(4,), dtype=float64)\n"
+     ]
+    }
+   ],
    "source": [
     "# Verification only\n",
-    "# t = qlayer.qnode(inp, wts)\n",
-    "# print(t)"
+    "if num_of_qubits == 4:\n",
+    "    t = qlayer.qnode(inp, wts)\n",
+    "    print(t)"
    ]
   },
   {
