--- a/circuit_ansatz/generalized_keras_qlayer.ipynb
+++ b/circuit_ansatz/generalized_keras_qlayer.ipynb
@@ -33,13 +33,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "sudden-syndication",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev = qml.device('default.qubit', wires=num_of_qubits, shots=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "italian-research",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev = qml.device('default.qubit', wires=num_of_qubits, shots=1000)\n",
-    "\n",
     "@qml.qnode(dev)\n",
     "def qnode(inputs, weights): \n",
     "    # Data Encoding with the inputs\n",
