--- a/circuit_ansatz/qml_models_pipeline.ipynb
+++ b/circuit_ansatz/qml_models_pipeline.ipynb
@@ -208,7 +208,7 @@
     "model.compile(opt, loss=\"mean_squared_error\")\n",
     "\n",
     "# the model stabilizes around epoch 5, test to at least 20 epochs for 4 qubits and layers 1-2\n",
-    "# seems to follow this trend for other quantum lparameters\n",
+    "# seems to follow this trend for other quantum layer parameters\n",
     "# fitting = model.fit(data, targets, epochs=6, batch_size=5, validation_split=0.25, verbose=1)\n",
     "fitting = model.fit(data, targets, epochs=20, batch_size=5, validation_split=0.25, verbose=1)"
    ]
@@ -222,16 +222,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([ 1.60039071, -0.67087901, -0.28750639, -1.0088204 ])]"
+       "[array([ 0.57821046, -0.83626895, -0.8184806 , -0.25081627])]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
