--- a/Quantum_Torch_Model/model_exploration.ipynb
+++ b/Quantum_Torch_Model/model_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,9 +64,9 @@
        "      <td>models_saved/samplemodel__l0.1bs100ne1.pth</td>\n",
        "      <td>1</td>\n",
        "      <td>100</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>0.1000</td>\n",
        "      <td>0.274299</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -75,26 +75,143 @@
        "      <td>models_saved/samplemodel2__l0.1bs100ne1.pth</td>\n",
        "      <td>1</td>\n",
        "      <td>100</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>0.1000</td>\n",
        "      <td>0.278773</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Model_Type_2_LRTests</td>\n",
+       "      <td>models_saved/Model_Type_2_LRTests__l0.0001bs10...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.166413</td>\n",
+       "      <td>0.401868</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Model_Type_2_LRTests</td>\n",
+       "      <td>models_saved/Model_Type_2_LRTests__l0.1bs100ne...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.1000</td>\n",
+       "      <td>0.307968</td>\n",
+       "      <td>0.445604</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Model_Type_2_LRTests</td>\n",
+       "      <td>models_saved/Model_Type_2_LRTests__l0.001bs100...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.0010</td>\n",
+       "      <td>0.290425</td>\n",
+       "      <td>0.454505</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Model_Type_2_LRTests</td>\n",
+       "      <td>models_saved/Model_Type_2_LRTests__l1.0bs100ne...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.327587</td>\n",
+       "      <td>0.190659</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Model_Type_2_LRTests</td>\n",
+       "      <td>models_saved/Model_Type_2_LRTests__l0.01bs100n...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.0100</td>\n",
+       "      <td>0.334451</td>\n",
+       "      <td>0.445055</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Model_Type_2_BSTests</td>\n",
+       "      <td>models_saved/Model_Type_2_BSTests__l0.0001bs10...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.197555</td>\n",
+       "      <td>0.465300</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Model_Type_2_BSTests</td>\n",
+       "      <td>models_saved/Model_Type_2_BSTests__l0.0001bs10...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.300923</td>\n",
+       "      <td>0.451265</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Model_Type_2_BSTests</td>\n",
+       "      <td>models_saved/Model_Type_2_BSTests__l0.0001bs10...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.364133</td>\n",
+       "      <td>0.175900</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Model_Type_2_BSTests</td>\n",
+       "      <td>models_saved/Model_Type_2_BSTests__l0.0001bs1n...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.279514</td>\n",
+       "      <td>0.453695</td>\n",
+       "      <td>0.1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     model_name                                      savedir  num_epochs  \\\n",
-       "0   samplemodel   models_saved/samplemodel__l0.1bs100ne1.pth           1   \n",
-       "1  samplemodel2  models_saved/samplemodel2__l0.1bs100ne1.pth           1   \n",
+       "              model_name                                            savedir  \\\n",
+       "0            samplemodel         models_saved/samplemodel__l0.1bs100ne1.pth   \n",
+       "1           samplemodel2        models_saved/samplemodel2__l0.1bs100ne1.pth   \n",
+       "2   Model_Type_2_LRTests  models_saved/Model_Type_2_LRTests__l0.0001bs10...   \n",
+       "3   Model_Type_2_LRTests  models_saved/Model_Type_2_LRTests__l0.1bs100ne...   \n",
+       "4   Model_Type_2_LRTests  models_saved/Model_Type_2_LRTests__l0.001bs100...   \n",
+       "5   Model_Type_2_LRTests  models_saved/Model_Type_2_LRTests__l1.0bs100ne...   \n",
+       "6   Model_Type_2_LRTests  models_saved/Model_Type_2_LRTests__l0.01bs100n...   \n",
+       "7   Model_Type_2_BSTests  models_saved/Model_Type_2_BSTests__l0.0001bs10...   \n",
+       "8   Model_Type_2_BSTests  models_saved/Model_Type_2_BSTests__l0.0001bs10...   \n",
+       "9   Model_Type_2_BSTests  models_saved/Model_Type_2_BSTests__l0.0001bs10...   \n",
+       "10  Model_Type_2_BSTests  models_saved/Model_Type_2_BSTests__l0.0001bs1n...   \n",
        "\n",
-       "   batch_size  learning_rate  average_loss  accuracy  threshold  \n",
-       "0         100            0.1      0.274299       1.0       10.0  \n",
-       "1         100            0.1      0.278773       1.0       10.0  "
+       "    num_epochs  batch_size  learning_rate  average_loss  accuracy  threshold  \n",
+       "0            1         100         0.1000      0.274299  1.000000       10.0  \n",
+       "1            1         100         0.1000      0.278773  1.000000       10.0  \n",
+       "2           30         100         0.0001      0.166413  0.401868        0.1  \n",
+       "3           30         100         0.1000      0.307968  0.445604        0.1  \n",
+       "4           30         100         0.0010      0.290425  0.454505        0.1  \n",
+       "5           30         100         1.0000      0.327587  0.190659        0.1  \n",
+       "6           30         100         0.0100      0.334451  0.445055        0.1  \n",
+       "7           30        1000         0.0001      0.197555  0.465300        0.1  \n",
+       "8           30          10         0.0001      0.300923  0.451265        0.1  \n",
+       "9           30       10000         0.0001      0.364133  0.175900        0.1  \n",
+       "10          30           1         0.0001      0.279514  0.453695        0.1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
